**************
RECENT CHANGES
**************

======
1.80.0
======

* Support for modules inside the vendor folder if app is not in phar mode
* db:dump - Added two new table group for strip option (idx, ee_changelog)
* Fixed problem with installer and target path "."

======
1.79.0
======

* Added --all option to config:delete command
* Added --magerun-script option to config:get command
* Added --scope option to config:get command
* Added support for multiline config:set values "with \n" replacement.
* Added new --define option to script command
* Fixed broken db:create command
* Updated Symfony components to 2.3.5

======
1.78.4
======

* Fixed config merging of project specific configs
* Fix for issue #202 (by David Alger)

======
1.79.0
======

* Added new option "config-script" to "config:get" command

-----------------------------------------
SEE FULL CHANGELOG: http://bit.ly/10IDU1H
-----------------------------------------

Visit our new blog http://magerun.net