@@ -58,4 +58,4 @@ Licence
 
 Copyright
 ---------
-(c) 2012 {{ vendorNamespace }}
+(c) {{ "now"|date("Y") }} {{ vendorNamespace }}
