@@ -15,6 +15,13 @@ class CreateCommand extends AbstractDatabaseCommand
             ->setName('db:create')
             ->setDescription('Create currently configured database')
         ;
+
+        $help = <<<HELP
+The command tries to create the configured database according to your
+settings in app/etc/local.xml.
+The configured user must have "CREATE DATABASE" privileges on MySQL Server.
+HELP;
+        $this->setHelp($help);
     }
 
     /**
