@@ -16,6 +16,13 @@ class InfoCommand extends AbstractDatabaseCommand
             ->addDeprecatedAlias('database:info', 'Please use db:info')
             ->setDescription('Dumps database informations')
         ;
+
+        $help = <<<HELP
+This command is useful to print all informations about the current configured database in app/etc/local.xml.
+It can print connection string for JDBC, PDO connections.
+HELP;
+        $this->setHelp($help);
+
     }
 
     /**
