@@ -17,6 +17,18 @@ class QueryCommand extends AbstractDatabaseCommand
             ->addOption('only-command', null, InputOption::VALUE_NONE, 'Print only mysql command. Do not execute')
             ->setDescription('Executes an SQL query on the database defined in local.xml')
         ;
+
+        $help = <<<HELP
+Executes an SQL query on the current configured database. Wrap your SQL in
+single or double quotes.
+
+If your query produces a result (e.g. a SELECT statement), the output of the
+mysql cli tool will be returned.
+
+* Requires MySQL CLI tools installed on your system.
+
+HELP;
+        $this->setHelp($help);
     }
     
     /**
