@@ -15,6 +15,8 @@ class ReindexAllCommand extends AbstractIndexerCommand
             ->setName('index:reindex:all')
             ->setDescription('Reindex all magento indexes')
         ;
+
+        $this->setHelp('Loops all magento indexes and triggers reindex.');
     }
 
     /**
