@@ -15,6 +15,15 @@ class InstallExtensionCommand extends AbstractConnectCommand
             ->addArgument('package', InputArgument::REQUIRED, 'Package to install')
             ->setDescription('Install magento-connect package')
         ;
+
+        $help = <<<HELP
+If the package could not be found a search for alternatives will be done.
+If alternatives could be found you can select the package to install.
+
+* Requires Magento's `mage` shell script.
+* Does not work with Windows as operating system.
+HELP;
+        $this->setHelp($help);
     }
 
     /**
