@@ -14,6 +14,12 @@ class UpgradeExtensionCommand extends AbstractConnectCommand
             ->addArgument('package', \Symfony\Component\Console\Input\InputArgument::REQUIRED, 'Package to upgrade')
             ->setDescription('Upgrade magento-connect package')
         ;
+
+        $help = <<<HELP
+* Requires Magento's `mage` shell script.
+* Does not work with Windows as operating system.
+HELP;
+        $this->setHelp($help);
     }
 
     /**
