@@ -16,6 +16,11 @@ class RunCommand extends AbstractMagentoCommand
         $this
             ->setName('sys:setup:run')
             ->setDescription('Runs all new setup scripts.');
+        $help = <<<HELP
+Runs all setup scripts (no need to call frontend).
+This command is useful if you update your system with enabled maintenance mode.
+HELP;
+        $this->setHelp($help);
     }
 
     /**
